removed a class fluid from logo image in home page, fixed home page imgage cropping issue. commented some improvements i thought

--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,8 @@
     background-position: center;
     background-repeat: no-repeat;
     min-height: 100vh;
-}
+    padding-bottom: 45vh;
+    }
 
 /* .landing-page-background {
     background: url('./assets/images/home-background-reduced.png');
